Refactor interfaces and services for improved clarity and functionality
- Updated IInventoryService to include methods for adjusting inventory quantity and deleting inventory.
- Enhanced IOrderItemsRepository with additional methods for saving and deleting order items.
- Expanded IOrderRepository to support fetching orders by user ID and pagination.
- Modified IOrderService to include methods for updating order status and deleting orders.
- Improved IProductRepository with methods for fetching products by category and checking existence by name.
- Updated IProductService to support admin-specific product retrieval and deletion.
- Enhanced IUserRepository and IUserService for better user management and retrieval.
- Refactored mappers (CategoryMapper, ProductMapper, UserMapper) to streamline imports and improve readability.
- Updated repository implementations (CategoryRepository, InventoryRepository, OrderItemsRepository, OrderRepository, ProductRepository, UserRepository) to enhance code organization and clarity.
- Refactored services (CategoryService, InventoryService, OrderService, ProductService, UserService) to improve error handling, caching, and overall structure.
- Improved sorting utilities (MergeSort, QuickSort, SortingService) for better readability and maintainability.